--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <div class="col-xs-2">
                 <div id="fh5co-logo">
                   <a href="index.html"
-                    ><i class="icon-study"></i>Educa.uz<span>.</span></a
+                    ><i class="icon-study"></i>Educa.uz<span></span></a
                   >
                 </div>
               </div>
@@ -185,7 +185,6 @@
                    <div class="col-md-8 col-md-offset-2 text-center slider-text">
                      <div class="slider-text-inner">
                        <h1>Ta'limning buyuk maqsadi bilim emas, balki harakatdir</h1>
-                      <h2>nimadir</a></h2>
                       <p><a class="btn btn-primary btn-lg" href="#">Hoziroq o'rganishni boshlang!</a></p>
                      </div>
                    </div>
@@ -199,7 +198,6 @@
                    <div class="col-md-8 col-md-offset-2 text-center slider-text">
                      <div class="slider-text-inner">
                        <h1>Biz sizga yangi narsalarni o'rganishingizga yordam beramiz</h1>
-                      <h2>nimadir</a></h2>
                       <p><a class="btn btn-primary btn-lg btn-learn" href="#">Hoziroq o'rganishni boshlang!</a></p>
                      </div>
                    </div>
@@ -213,7 +211,6 @@
                    <div class="col-md-8 col-md-offset-2 text-center slider-text">
                      <div class="slider-text-inner">
                        <h1>Biz sizga yangi narsalarni o'rganishingizga yordam beramiz</h1>
-                      <h2>nimadir</a></h2>
                       <p><a class="btn btn-primary btn-lg btn-learn" href="#">Hoziroq o'rganishni boshlang!</a></p>
                      </div>
                    </div>
