--- a/teacher.html
+++ b/teacher.html
@@ -127,7 +127,7 @@
               <div class="col-xs-2">
                 <div id="fh5co-logo">
                   <a href="index.html"
-                    ><i class="icon-study"></i>Educa.uz<span>.</span></a
+                    ><i class="icon-study"></i>Educa.uz<span></span></a
                   >
                 </div>
               </div>
@@ -468,13 +468,13 @@
               </p>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-              <h3>Learning</h3>
+              <h3>O'rganish</h3>
               <ul class="fh5co-footer-links">
-                <li><a href="#">Course</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">Kurslar</a></li>
+                <li><a href="#">blog</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Meetups</a></li>
+                <li><a href="#">Shartlar</a></li>
+                <li><a href="#">Uchrashuvlar</a></li>
               </ul>
             </div>
 
@@ -483,29 +483,29 @@
               <ul class="fh5co-footer-links">
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Privacy</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="#">Handbook</a></li>
-                <li><a href="#">Held Desk</a></li>
+                <li><a href="#">Guvohlar</a></li>
+                <li><a href="#">Qo'llanma</a></li>
+                <li><a href="#">Ish stoli</a></li>
               </ul>
             </div>
 
             <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-              <h3>Engage us</h3>
+              <h3>Bizni jalb qiling</h3>
               <ul class="fh5co-footer-links">
                 <li><a href="#">Marketing</a></li>
-                <li><a href="#">Visual Assistant</a></li>
-                <li><a href="#">System Analysis</a></li>
-                <li><a href="#">Advertise</a></li>
+                <li><a href="#">Vizual yordamchi</a></li>
+                <li><a href="#">Tizim tahlili</a></li>
+                <li><a href="#">Reklama</a></li>
               </ul>
             </div>
 
             <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
               <h3>Legal</h3>
               <ul class="fh5co-footer-links">
-                <li><a href="#">Find Designers</a></li>
-                <li><a href="#">Find Developers</a></li>
-                <li><a href="#">Teams</a></li>
-                <li><a href="#">Advertise</a></li>
+                <li><a href="#">Dizaynerlarni toping</a></li>
+                <li><a href="#">Developerlarni toping</a></li>
+                <li><a href="#">Jamoalar</a></li>
+                <li><a href="#">Reklama</a></li>
                 <li><a href="#">API</a></li>
               </ul>
             </div>
@@ -515,13 +515,11 @@
             <div class="col-md-12 text-center">
               <p>
                 <small class="block"
-                  >&copy; 2016 Free HTML5. All Rights Reserved.</small
+                  >&copy; 2016 bepul HTML5. Barcha huquqlar himoyalangan.</small
                 >
                 <small class="block"
                   >Designed by
-                  <a href="http://freehtml5.co/" target="_blank"
-                    >FreeHTML5.co</a
-                  >
+                  <a href="#" target="_blank">Mironshoh Asadov</a>
                   Demo Images:
                   <a href="http://unsplash.co/" target="_blank">Unsplash</a>
                   &amp;
