--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Free HTML5 Website Template by Mironshoh"
+      content="Free HTML5 Website Template by freehtml5.co"
     />
     <meta
       name="keywords"
       content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
     />
-    <meta name="author" content="Mironshoh" />
+    <meta name="author" content="freehtml5.co" />
 
     <!-- 
 	//////////////////////////////////////////////////////
@@ -46,6 +46,11 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css1/owl.carousel.css" />
+    <link rel="stylesheet" href="css1/templatemo-style.css" />
+    <link rel="stylesheet" href="css1/font-awesome.min.css" />
+    <link rel="stylesheet" href="css1/bootstrap.min.css" />
+    <link rel="stylesheet" href="css1/owl.theme.default.min.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400"
       rel="stylesheet"
@@ -91,7 +96,7 @@
             <div class="row">
               <div class="col-xs-12 text-right">
                 <p class="site">www.yourdomainname.com</p>
-                <p class="num">Call: +01 123 456 7890</p>
+                <p class="num">Tel: +01 123 456 7890</p>
                 <ul class="fh5co-social">
                   <li>
                     <a href="#"><i class="icon-facebook2"></i></a>
@@ -113,6 +118,12 @@
         <div class="top-menu">
           <div class="container">
             <div class="row">
+              <div class="search-box flex-active">
+                <input type="text" class="search-txt" placeholder="Search" />
+                <p class="search-btn">
+                  <ion-icon name="search-outline"></ion-icon>
+                </p>
+              </div>
               <div class="col-xs-2">
                 <div id="fh5co-logo">
                   <a href="index.html"
@@ -120,12 +131,13 @@
                   >
                 </div>
               </div>
-              <div class="col-xs-10 text-right menu-1">
+
+              <div class="col-xs-push-8 text-right menu-1">
                 <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="courses.html">Courses</a></li>
-                  <li><a href="teacher.html">Teacher</a></li>
-                  <li><a href="about.html">About</a></li>
+                  <li></li>
+                  <li><a href="courses.html">Kurslar</a></li>
+                  <li><a href="teacher.html">O'qituvchilar</a></li>
+                  <li><a href="about.html">Ma'lumot</a></li>
                   <li><a href="pricing.html">Pricing</a></li>
                   <li class="has-dropdown">
                     <a href="blog.html">Blog</a>
@@ -136,12 +148,18 @@
                       <li><a href="#">API</a></li>
                     </ul>
                   </li>
-                  <li class="active"><a href="contact.html">Contact</a></li>
-                  <li class="btn-cta">
-                    <a href="#"><span>Login</span></a>
+                  <li><a href="contact.html">Bog'lanish</a></li>
+
+                  <li class="flex-lang">
+                    <a class="lang__name" href="#">UZ</a>
+                    <a>|</a>
+                    <a class="lang__name" href="#">RU</a>
                   </li>
                   <li class="btn-cta">
-                    <a href="#"><span>Create a Course</span></a>
+                    <a href="#"><span>Kirish</span></a>
+                  </li>
+                  <li class="btn-cta">
+                    <a href="#"><span>Kurs kiritish</span></a>
                   </li>
                 </ul>
               </div>
@@ -159,7 +177,7 @@
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2 text-center slider-text">
                     <div class="slider-text-inner">
-                      <h1 class="heading-section">Contact us</h1>
+                      <h1 class="heading-section">Biz bilan bog'lanish</h1>
                       <h2>
                         Free html5 templates Made by
                         <a href="#" target="_blank">Mironshoh</a>
@@ -178,7 +196,7 @@
           <div class="row">
             <div class="col-md-5 col-md-push-1 animate-box">
               <div class="fh5co-contact-info">
-                <h3>Contact Information</h3>
+                <h3>Bog'lanish uchun ma'lumot</h3>
                 <ul>
                   <li class="address">
                     198 West 21th Street, <br />
@@ -195,7 +213,7 @@
               </div>
             </div>
             <div class="col-md-6 animate-box">
-              <h3>Get In Touch</h3>
+              <h3>Aloqa qiling</h3>
               <form action="#">
                 <div class="row form-group">
                   <div class="col-md-6">
@@ -204,7 +222,7 @@
                       type="text"
                       id="fname"
                       class="form-control"
-                      placeholder="Your firstname"
+                      placeholder="Sizning Ismingiz"
                     />
                   </div>
                   <div class="col-md-6">
@@ -213,7 +231,7 @@
                       type="text"
                       id="lname"
                       class="form-control"
-                      placeholder="Your lastname"
+                      placeholder="Sizning Familiyangiz"
                     />
                   </div>
                 </div>
@@ -225,7 +243,7 @@
                       type="text"
                       id="email"
                       class="form-control"
-                      placeholder="Your email address"
+                      placeholder="Sizning e-pochta manzilingiz"
                     />
                   </div>
                 </div>
@@ -237,7 +255,7 @@
                       type="text"
                       id="subject"
                       class="form-control"
-                      placeholder="Your subject of this message"
+                      placeholder="Ushbu xabarning mavzusi"
                     />
                   </div>
                 </div>
@@ -251,14 +269,14 @@
                       cols="30"
                       rows="10"
                       class="form-control"
-                      placeholder="Say something about us"
+                      placeholder="Biz haqimizda biror narsa ayting"
                     ></textarea>
                   </div>
                 </div>
                 <div class="form-group">
                   <input
                     type="submit"
-                    value="Send Message"
+                    value="Xabar yuborish"
                     class="btn btn-primary"
                   />
                 </div>
@@ -307,13 +325,13 @@
               </p>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-              <h3>Learning</h3>
+              <h3>O'rganish</h3>
               <ul class="fh5co-footer-links">
-                <li><a href="#">Course</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">Kurslar</a></li>
+                <li><a href="#">blog</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Meetups</a></li>
+                <li><a href="#">Shartlar</a></li>
+                <li><a href="#">Uchrashuvlar</a></li>
               </ul>
             </div>
 
@@ -322,29 +340,29 @@
               <ul class="fh5co-footer-links">
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Privacy</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="#">Handbook</a></li>
-                <li><a href="#">Held Desk</a></li>
+                <li><a href="#">Guvohlar</a></li>
+                <li><a href="#">Qo'llanma</a></li>
+                <li><a href="#">Ish stoli</a></li>
               </ul>
             </div>
 
             <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
-              <h3>Engage us</h3>
+              <h3>Bizni jalb qiling</h3>
               <ul class="fh5co-footer-links">
                 <li><a href="#">Marketing</a></li>
-                <li><a href="#">Visual Assistant</a></li>
-                <li><a href="#">System Analysis</a></li>
-                <li><a href="#">Advertise</a></li>
+                <li><a href="#">Vizual yordamchi</a></li>
+                <li><a href="#">Tizim tahlili</a></li>
+                <li><a href="#">Reklama</a></li>
               </ul>
             </div>
 
             <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
               <h3>Legal</h3>
               <ul class="fh5co-footer-links">
-                <li><a href="#">Find Designers</a></li>
-                <li><a href="#">Find Developers</a></li>
-                <li><a href="#">Teams</a></li>
-                <li><a href="#">Advertise</a></li>
+                <li><a href="#">Dizaynerlarni toping</a></li>
+                <li><a href="#">Developerlarni toping</a></li>
+                <li><a href="#">Jamoalar</a></li>
+                <li><a href="#">Reklama</a></li>
                 <li><a href="#">API</a></li>
               </ul>
             </div>
@@ -354,11 +372,12 @@
             <div class="col-md-12 text-center">
               <p>
                 <small class="block"
-                  >&copy; 2016 Free HTML5. All Rights Reserved.</small
+                  >&copy; 2016 bepul HTML5. Barcha huquqlar himoyalangan.</small
                 >
                 <small class="block"
-                  >Designed by <a href="#" target="_blank">FreeHTML5.co</a> Demo
-                  Images:
+                  >Designed by
+                  <a href="#" target="_blank">Mironshoh Asadov</a>
+                  Demo Images:
                   <a href="http://unsplash.co/" target="_blank">Unsplash</a>
                   &amp;
                   <a href="https://www.pexels.com/" target="_blank"
@@ -376,7 +395,6 @@
       <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
     </div>
 
-    <!-- jQuery -->
     <script src="js/jquery.min.js"></script>
     <!-- jQuery Easing -->
     <script src="js/jquery.easing.1.3.js"></script>
@@ -395,9 +413,6 @@
     <!-- Magnific Popup -->
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/magnific-popup-options.js"></script>
-    <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-    <script src="js/google_map.js"></script>
     <!-- Count Down -->
     <script src="js/simplyCountdown.js"></script>
     <!-- Main -->
@@ -420,5 +435,15 @@
         enableUtc: false,
       });
     </script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+    <script src="js2/owl.carousel.min.js"></script>
+    <script src="js2/custom.js"></script>
   </body>
 </html>
